feat: authentication with Swan
