# src/main/java/app/bpartners/api/endpoint/rest/controller/UserController.java
@@ -1,31 +1,35 @@
 package app.bpartners.api.endpoint.rest.controller;
 
+import app.bpartners.api.endpoint.rest.mapper.UserMapper;
+import app.bpartners.api.endpoint.rest.model.User;
 import app.bpartners.api.model.BoundedPageSize;
-import app.bpartners.api.model.User;
-import app.bpartners.api.model.exception.NotImplementedException;
+import app.bpartners.api.model.PageFromOne;
+import app.bpartners.api.service.UserService;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-import app.bpartners.api.model.PageFromOne;
-import app.bpartners.api.service.UserService;
 
 @RestController
 @AllArgsConstructor
 public class UserController {
   private final UserService userService;
+  private final UserMapper userMapper;
 
   @GetMapping("/users/{id}")
-  public User getStudentById(@PathVariable String id) {
-    throw new NotImplementedException("/users/id endpoint not yet implemented");
+  public User getUserById(@PathVariable String id) {
+    return userMapper.toRestUser(userService.getUserById(id));
   }
 
   @GetMapping("/users")
-  public List<User> getStudents(
+  public List<User> getUsers(
       @RequestParam PageFromOne page,
       @RequestParam("page_size") BoundedPageSize pageSize) {
-    throw new NotImplementedException("/users endpoint not yet implemented");
+    return userService.getUsers(page, pageSize).stream()
+        .map(userMapper::toRestUser)
+        .collect(Collectors.toUnmodifiableList());
   }
 }
